package classifiedads.domain.model.item;

public enum ItemStatus {
    CREATED,
    APPROVED,
    REJECTED,
    LISTED,
    SOLD,
    EXPIRED,
    CLOSED
}
