package classifiedads.domain.model.user;

public enum AccountStatus {
    ENABLED,
    DISABLED
}
